--- a/02-typescript/01-converter/index.html
+++ b/02-typescript/01-converter/index.html
@@ -7,6 +7,8 @@
     <title>Converter</title>
 </head>
 <body>
+
+    <h2>Temperature Converter</h2>
     <input type="number" id="celcius" />
     <input type="number" id="fahrenheit" />
     <script src="dist/bundle.js"></script>
